--- a/cloud-manager-sandbox/values.yaml
+++ b/cloud-manager-sandbox/values.yaml
@@ -1,11 +1,11 @@
 nameOverride:
 fullnameOverride:
 imageOverride:
+certificateName:
 
 environment:
 sandboxId:
 hostname:
-namespace:
 
 
 replicaCount: 1
@@ -30,12 +30,6 @@ service:
 
 ingress:
   enabled: true
-  annotations:
-    kubernetes.io/ingress.class: "azure/application-gateway"
-    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
-    appgw.ingress.kubernetes.io/backend-protocol: "http"
-    appgw.ingress.kubernetes.io/connection-draining: "true"
-    appgw.ingress.kubernetes.io/connection-draining-timeout: "60"
 
 container:
   preStopSleepTime: "120"
