Ataching all of the labels rather than just the selectorLabels.

--- a/cloud-manager-sandbox/templates/deployment.yaml
+++ b/cloud-manager-sandbox/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "cloud-manager-sandbox.selectorLabels" . | nindent 8 }}
+        {{- include "cloud-manager-sandbox.labels" . | nindent 8 }}
     spec:
       affinity:
         nodeAffinity:
