--- a/cloud-manager-sandbox/templates/service.yaml
+++ b/cloud-manager-sandbox/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
+      targetPort: 3000
       protocol: TCP
       name: communication
   selector:
