--- a/cloud-manager-sandbox/templates/deployment.yaml
+++ b/cloud-manager-sandbox/templates/deployment.yaml
@@ -21,6 +21,17 @@ spec:
     spec:
       affinity:
         nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/os
+                operator: In
+                values:
+                - linux
+              - key: kubernetes.io/arch
+                operator: In
+                values:
+                - amd64
           preferredDuringSchedulingIgnoredDuringExecution:
           - weight: 1
             preference:
