Rev'ing to 1.0.1-traefik.

--- a/cloud-manager-sandbox/templates/deployment.yaml
+++ b/cloud-manager-sandbox/templates/deployment.yaml
@@ -33,9 +33,9 @@ spec:
                 values:
                 - amd64
               - key: agentpool
-                operator: In
+                operator: NotIn
                 values:
-                - linux1
+                - pool
       restartPolicy: Always
       terminationGracePeriodSeconds: {{ .Values.container.terminationGracePeriodSeconds }}
       containers:
